<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Huyenhoc</string>
    <string name="name">Nhập họ và tên</string>
    <string name="dateofbirth">Ngày tháng năm sinh</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="hourborn">Giờ sinh</string>
    <string name="btnfinish">Hoàn thành</string>
    <string name="btnapp">Chương trình</string>
    <string name="btnchange">Đổi ngày</string>
    <string name="btnhot">Hot nhất</string>
    <string name="btnsetting">Cấu hình</string>
    <string name="site">Huyenhoc.com</string>
    <string name="backtomenu">Trở lại menu</string>
    <string name="back">Trở lại</string>
    <string name="lt">&lt;</string>
    <string name="gt">&gt;</string>
    <string name="sendsms">Gửi tin nhắn</string>
	<string name="err_name">Họ và tên không được bỏ trống.</string>
	<string name="err_con">Cần có kết nối internet để tải dữ liệu, hãy thử lại.</string>
	<string name="solar">Ngày dương</string>
	<string name="lunar">Ngày âm</string>
	<string-array name="optiontype">
		<item >Tử vi </item>
		<item >Màu sắc</item>
		<item >Quan hệ</item>
		<item >Giờ đẹp</item>
		<item >Chọn ngày</item>
		<item >Dự đoán</item>
		<item >Xem hướng</item>
		<item >Phong thủy</item>
	</string-array>
	<string name="tuvi">Tử vi</string>
	<string name="phong">phong</string>
	<string name="thuy">thủy</string>
	<string name="ung">Ứng</string>
	<string name="dung">dụng</string>
	<string name="cuoc">cuộc</string>
	<string name="song">sống</string>
	
	<string name="ty">Tý</string>
	<string name="suu">Sửu</string>
	<string name="dan">Dần</string>
	<string name="mao">Mão</string>
	<string name="thin">Thìn</string>
	<string name="tyj">Tỵ</string>
	<string name="ngo">Ngọ</string>
	<string name="mui">Mùi</string>
	<string name="than">Thân</string>
	<string name="dau">Dậu</string>
	<string name="tuat">Tuất</string>
	<string name="hoi">Hợi</string>
	
</resources>