<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/stripe"
            android:orientation="vertical"
            android:paddingTop="30dip" 
            android:paddingLeft="20dip">

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuvi"
                android:textColor="#fff"
                android:textSize="42dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phong"
                android:textColor="#fff"
                android:textSize="42dip"
                android:layout_marginLeft="10dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thuy"
                android:textColor="#fff"
                android:textSize="42dip"
                android:layout_marginLeft="20dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ung"
                android:textColor="#fff"
                android:textSize="42dip"
                android:layout_marginTop="20dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dung"
                android:textColor="#fff"
                android:textSize="42dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuoc"
                android:textColor="#fff"
                android:textSize="42dip"
                android:layout_marginLeft="15dip" />

            <com.candroid.huyenhoc.Text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:textColor="#fff"
                android:textSize="42dip"
                android:layout_marginLeft="20dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="5dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <com.candroid.huyenhoc.Btn
                    android:id="@+id/btnApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:text="@string/btnapp"
                    android:textColor="#fff"
                    android:textSize="22dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <com.candroid.huyenhoc.Btn
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:text="@string/btnchange"
                    android:textColor="#fff"
                    android:textSize="22dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <com.candroid.huyenhoc.Btn
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:text="@string/btnsetting"
                    android:textColor="#fff"
                    android:textSize="22dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <com.candroid.huyenhoc.Btn
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:text="@string/btnintro"
                    android:textColor="#fff"
                    android:textSize="22dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <com.candroid.huyenhoc.Text
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site"
                    android:textColor="#7f0000"
                    android:textSize="18dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>