<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dip" >

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lt"
            android:textSize="24dip"
            android:textColor="#7f0000" />

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/backtomenu"
            android:textSize="24dip"
            android:textColor="#7f0000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:id="@+id/btnOptions" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/option_full_background" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:paddingRight="10dip" >

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textColor="#7f0000"
            android:textSize="18dip" />
    </LinearLayout>

</LinearLayout>