<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="3px" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="7dip" >

        <EditText
            android:id="@+id/edtName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColor="#7f0000"
            android:textSize="20dip" />

        <com.candroid.huyenhoc.Text
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateofbirth"
            android:textColor="#7f0000"
            android:textSize="28dip" 
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/scroll_full"
        android:orientation="horizontal"
        android:paddingLeft="30dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/txtDayofbith"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="12"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMonthofbirh"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="12"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtYearofbirth"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="1988"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.candroid.huyenhoc.Text
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="#7f0000"
                android:textSize="50dip" 
                android:gravity="center"/>

            <com.candroid.huyenhoc.Text
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="50dip"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.candroid.huyenhoc.Text
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hourborn"
                android:textColor="#7f0000"
                android:textSize="24dip" 
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/scroll_full"
        android:orientation="horizontal"
        android:paddingLeft="30dip"
        android:paddingRight="20dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="12"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="12"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />

        <com.candroid.huyenhoc.Text
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="Thân"
            android:textColor="#7f0000"
            android:textSize="32dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <com.candroid.huyenhoc.Btn
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hoan_thanh_button"
            android:text="@string/btnfinish"
            android:textColor="#fff"
            android:textSize="24dip" />
    </LinearLayout>

</LinearLayout>