<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/detail_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lt"
            android:textColor="#fff"
            android:textSize="32dip" />

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:id="@+id/txtcap"
            android:text="Cuộc sống"
            android:textColor="#fff"
            android:textSize="32dip" />

        <com.candroid.huyenhoc.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/gt"
            android:textColor="#fff"
            android:textSize="32dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:background="@drawable/table_background"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:paddingTop="30dip" >
				<LinearLayout android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="Tuổi Đinh Sửu thuộc mạng Thủy, cuộc sống rất tốt đẹp, cuộc đời ít cực nhọc và ít bị lao tâm khổ trí."
	                android:textColor="#000"
	                android:textSize="14dip"
	                android:paddingLeft="10dip"
	                android:paddingBottom="10dip" />
	            <EditText
	                android:id="@+id/edtParam1" 
	                android:layout_width="fill_parent"
	                android:layout_height="50dip"
	                android:hint="Param1" />
	            <EditText
	                android:id="@+id/edtParam2"
	                android:layout_width="fill_parent"
	                android:layout_height="50dip"
	                android:hint="Param2" />
	            <EditText
	                android:id="@+id/edtParam3"
	                android:layout_width="fill_parent"
	                android:layout_height="50dip"
	                android:hint="Param3" />
	            <EditText
	                android:id="@+id/edtParam4"
	                android:layout_width="fill_parent"
	                android:layout_height="50dip"
	                android:hint="Param4" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="30dip"
            android:paddingRight="30dip" >

            <com.candroid.huyenhoc.Btn
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hoan_thanh_button"
                android:text="@string/sendsms"
                android:textColor="#fff"
                android:textSize="24dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </LinearLayout>

</LinearLayout>